--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 # Site
-
- repository: sproogen/resume-theme
-
-# favicon: images/favicon.ico
+repository: ssigner/ssigner.github.io
+# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Content configuration version
 version: 2
@@ -18,21 +16,15 @@ darkmode: false
 
 # Social links
 github_username:  ssigner
-# stackoverflow_username: "00000001"
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
-# xing_username: jekyll
-# pinterest_username: jekyll
-# googleplus_username: +jekyll
-# orcid_username: 0000-0000-0000-0000
-# - title: another link
-#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
-#   url: Link url (eg. https://google.com)
 
+# Additional icon links
+additional_links:
 - title: blog
   icon: fas fa-globe
   url: https://ssigner.tistory.com/
+# - title: another link
+#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
+#   url: Link url (eg. https://google.com)
 
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
@@ -41,7 +33,7 @@ github_username:  ssigner
 # google_analytics: "UA-00000000-0"
 
 # About Section
-# about_title: About Me
+# about_title: About Me (Use this to override about section title)
 about_profile_image: images/profile.jpeg
 about_content: | # this will include new lines to allow paragraphs
   안녕하세요, 저는 김종훈입니다. 저는 주니어 게임 개발자입니다. 유니티를 이용해 2D 게임을 개발하는 것에 관심이 있고, 기술적으로는 C#의 LINQ라이브러리를 활용한 데이터 쿼리를 이용해 효율적인 데이터 탐색에 관심이 있어 공부중입니다. 
@@ -93,10 +85,8 @@ content:
         description: | # this will include new lines to allow paragraphs
           <mark>Unity 2D</mark>를 이용해, <mark>C#</mark>스크립트로 개발을 했고, 에셋은 <mark>itch.io</mark>에서 적절한 리소스들을 구했습니다. 현재 출시 단계 과정을 위해 Stove 인디와 계약중이며, 12월 중으로 출시 예정입니다.
 
-          1인 개발로 진행했고, 진행 과정에서 게임 기획, 리소스 활용, 데이터 관리, 게임 빌드, 테스트 및 밸런스 조정, 출시까지 게임 개발 프로세스에 있어 전반적인 과정을 경험하고 공부할 수 있었습니다. 
-          
-
-  - title: Experience # Title for the section
+          1인 개발로 진행했고, 진행 과정에서 게임 기획, 리소스 활용, 데이터 관리, 게임 빌드, 테스트 및 밸런스 조정, 출시까지 게임 개발 프로세스에 있어 전반적인 과정을 경험하고 공부할 수 있었습니다.        
+- title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
@@ -109,7 +99,6 @@ content:
           게임 개발자를 희망하는 주니어 개발자들 대상으로 진행한 게임 개발자 교육 프로그램
         description: | # this will include new lines to allow paragraphs
           게임 출시를 위한 모든 단계를 경험하고 공부할 수 있었고, 현직 시니어 개발자에게 배우면서 깔끔한 코드작성, 코드 리팩토링, 데이터 관리 및 자동화, 현직자는 어떻게 게임 개발을 진행하는지 배울 수 있었습니다.
-
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
@@ -123,7 +112,6 @@ content:
           현재 재학중이며, 자료구조, 컴퓨터 알고리즘, 컴퓨터 구조, 운영체제 등 여러 CS전공 과목에 대해 기본 지식을 배우고 있습니다.
 
           또한 여러 개인, 팀 프로젝트를 과목을 수강하며 진행했고, 이 과정에서 협업의 중요성에 대해 배웠습니다.
-          
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
@@ -134,11 +122,25 @@ footer_show_references: true
 # references_title: References on request (Override references text)
 
 # Build settings
-remote_theme: sproogen/resume-theme
+# theme: modern-resume-theme (Use this is you are hosting your resume yourself)
+remote_theme: sproogen/modern-resume-theme
 
 sass:
   sass_dir: _sass
   style: compressed
 
 plugins:
-- jekyll-seo-tag
+ - jekyll-seo-tag
+
+exclude : [
+  "Gemfile",
+  "Gemfile.lock",
+  "node_modules",
+  "vendor/bundle/",
+  "vendor/cache/",
+  "vendor/gems/",
+  "vendor/ruby/",
+  "lib/",
+  "scripts/",
+  "docker-compose.yml",
+  ]
