docs: 게임아카데미 수정

--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ content:
         link: https://bit.ly/BCA_trainee
         # link_text: boringcompany.com
         sub_title: 교육 수강생
-        caption: 2023년 9월 ~ 현재
+        caption: 2023년 9월 ~ 2023년 12월
         quote: >
           게임 개발자를 희망하는 주니어 개발자들 대상으로 진행한 게임 개발자 교육 프로그램
         description: | # this will include new lines to allow paragraphs
