--- a/_config.yml
+++ b/_config.yml
@@ -48,11 +48,17 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  안녕하세요, 저는 김종훈입니다. 저는 주니어 게임 개발자입니다. 유니티를 이용해 2D 게임을 개발하는 것에 관심이 있고, 기술적으로는 C#의 LINQ라이브러리를 활용한 데이터 쿼리를 이용해 효율적인 데이터 탐색에 관심이 있어 공부중입니다. 
+  안녕하세요, 저는 김종훈입니다. 저는 주니어 게임 개발자입니다. 스토브 인디에서 판매중인 "픽셀디펜스"를 개발했습니다. 유니티를 이용해 2D 게임을 개발하는 것에 관심이 있습니다.
 
-  1인 개발 및 여러 협업을 통해 <mark>깔끔한 코드 작성</mark>이 중요하다고 생각하게 되어, 현재는 초기 코드 작성에 있어 리팩토링을 고려한 코드를 작성하기 위해 노력중입니다.
+  1인 개발을 통해 게임 개발에 있어서 코드 작성뿐만 아니라 기획과 시스템의 기초 설계 또한 매우 중요하다고 생각해서 현재는 게임 시스템과 기획에 있어서도 공부 중입니다. 
+  게임 퍼블리싱에 있어서 1인으로 전반적인 경험을 해봤기 때문에 게임 하나를 만드는데는 개발파트 뿐만 아니라 기획, 디자인, 마케팅 등 여러 파트의 도움이 많이 필요하다고 느꼈고, 오히려 1인으로 개발과 퍼블리싱을
+  진행했었기 때문에 협업의 중요성과 소중함을 인지하고 있습니다.
 
-  뿐만 아니라, <mark>오픈소스</mark> 기능들을 활용해 하나의 새로운 기능을 만드는 것 또한 흥미가 있습니다.
+  저는 개발에 있어서 컴파일과 정상적인 실행에 따른 결과, 즉 완성도를 중요하게 생각하는 개발자입니다. 완성을 하기 위해 필요한 질문을 스스로에게 계속 던지고 적재적소에 필요한 오픈소스가 있으면 주저않지 않고 
+  활용을 시도합니다. 그 과정에서 더 효율적인 방법이나 오픈소스가 있으면 망설이지 않고 활용해본 뒤 객관적으로 비교를 합니다.
+
+  코드 작성에 있어서는 단순한 기능 단위로 일관성 없어 코드를 찍어내는 것이 아닌, 소프트웨어 공학에 기반한 코드 작성을 하기 위해 노력중입니다. 소프트웨어 공학이론을 실전에서 적용하는 것이 어렵지만 개발 이후의 
+  유지보수, 리팩토링을 위해 꼭 필요하다고 생각합니다.
 
   기술: <mark>Unity2D</mark> and <mark>C#</mark>
 
